# VR

./: .gitignore  README.md  notes.txt  notes.txt~
calibration/: data_12Jan.mat  data_15Jan.mat  getData.m  info.txt  reading_posts.mat  single_pixel_error.m
code/: contents.org  data_info.text  info.text  info.txt  notes-exps.txt.txt  notes-exps.txt.txt~  r1_exp.text  r1a_exp.text  r1a_sim.text
code/ascension_tracker/: analyzeHist.m  initLocal.m  parameters_150831.mat  parseData.m  processDataAscensionTracker.m  spliceData.m
code/comms/: analyseData.m  collectMovingData.m  collectStaticData.m  getTimeIntervals.m  initLocal.m  meanWithSampleSize.m  plotIntervals.m  vizIntervals.m
code/exp1/: cleanup.m~  cleanupData.m  compute.m~  computeErrParams.m  computeErrParams.m~  computeError.m  computeError.m~  computeLine.m  computeLine.m~  distToLine.m  distToLine.m~  getLine.m  getLine.m~  getRangeToLine.m  lineFit.m~  lineFitRANSAC.m  lineFitRANSAC.m~  line_fit.m~  processed_data.mat  range_data.mat
code/exp10/: binPicking.m  binPicking_hk.m  carvedObject.m  gridCarver.m  gridMaker.m  initLocal.m  mahalanobisDistance.m  mahalanobisDistanceRay.m  occupancyMap.m  pickObjElements.m  plotCarvedElements.m  plotElements.m  sensorCarver.m  sensorCentricRep.m  testCarving.m  testMapping.m  testPerm.m  testSim.m  trial.m  vaneSimulator.m
code/exp11/: avgError.m  crossValBwX.m  dReg2SceneScript.m  dRegSceneScript.m  dRegSceneScript2.m  dRegScript.m  dRegress.m  dRegress2.m  dRegressSmoothing.m  errorVsM.m  errorVsN.m  estimateHistogram.m  estimateHistogram2.m  estimateHistogramGaussian.m  estimateHistogramSmoothing.m  evalDReg.m  evalDReg2.m  evalHPred.m  genBearingData.m  getBwErr.m  getHistogramBins.m  getSensorData.m  histDistance.m  holdoutBwX.m  holdoutBwXBwZ.m  initLocal.m  init_local.m  kdeCV.m  myKde.m  myKde2.m  pixelDataFromObsArray.m  pose2BearingFeatures.m  process_data_peta_240215.m  sampleFromHistogram.m  sampleFromHistogram2.m  sampleReadingFromHistogram2.m  selectBwLims.m  testRegression.m  testRegressionScene.m  timeStuff.m  (+4 more)
code/exp13/: initLocal.m  (+2 more)
code/exp15/: CMakeLists.txt
code/exp15/MPC/libs/PathTracker/: PathTracker.cpp
code/exp15/analyze_matlab/: initLocal.m
code/exp15/analyze_matlab/data_processors/: loadPath.m  plotDesiredAndFollowedPaths.m  plotPath.m  plotVehicleStateLog.m
code/exp15/analyze_matlab/examples/: genPaths.m  testPathTracker.m
code/exp15/analyze_matlab/path_generator/: addToCoarsePathPts.m  pruneFinePathPts.m  savePath.m  sinFnHandle.m  squareFnHandle.m
code/exp15/analyze_matlab/path_localizer/: dist2ToSegments.m  findClosestSegment.m  findLookaheadPt.m  localizer.m  pathToSegments.m  progressAlongSegment.m
code/exp15/analyze_matlab/path_tracker/: closestPointOnLineSegment.m  computeControls.m  dist2ToSegments.m  executeTracker.m  findClosestSegment.m  findLookaheadPt.m  progressAlongSegment.m
code/exp15/analyze_matlab/vehicle_models/: flatSim.m
code/exp15/include/ades/: DataProcessor.h  PathLocalizer.h  PathTracker.h  Test.h
code/exp15/include/support_at/: FlatSim.h  NavState.h  Point2D.h  VehicleState.h
code/exp15/matlab/: genAdesPath.m  initLocal.m  runVizTrackerRes.m  saveDesiredPath.m  spiralTrajFromGInput.m  spiralTrajToAdesPath.m  vizTrackerRes.m
code/exp15/path_tracker_cpp/: CMakeLists.txt  support_notes.txt
code/exp15/path_tracker_cpp/include/ades/: PathTracker.h  Scrap.h
code/exp15/path_tracker_cpp/include/support_at/: NavState.h  Point2D.h
code/exp15/path_tracker_cpp/matlab/: genDesiredPath.m  genStraightLinePath.m  loadDesiredPath.m  loadFollowedPath.m
code/exp15/path_tracker_cpp/src/: DataProcessor.cpp  PathLocalizer.cpp  Point2D.cpp  Scrap.cpp  Test.cpp  VehicleState.cpp  run_surrogate_tracker.cpp  run_tests.cpp
code/exp15/py/: straightLinePath.py
code/exp15/src/: DataProcessor.cpp  FlatSim.cpp  NavState.cpp  PathLocalizer.cpp  PathTracker.cpp  Point2D.cpp  hello_world.cpp  run_surrogate_tracker.cpp
code/gz/laser_sim/: CMakeLists.txt  compile.sh  floating_laser.cc  floating_laser.world  pre.sh
code/gz/laser_sim/include/: floating_laser.h
code/gz/laser_sim/src/: floating_laser.cc  move_model.cc
code/pcl/scan_match/: CMakeLists.txt  compile.sh  scan_match.cpp
code/pcl/scan_match/post_process/: parse_data.m
code/pcl/scan_match/post_process/hokuyo_data/: icp_results.txt
code/pcl/scan_match/post_process/hokuyo_data/data_160315/: icp_results.txt
writings/: notes.txt  sensor_modeling_notes.aux  sensor_modeling_notes.tex
(+1060 files in other folders)
